exports[`test should render with selected tags 1`] = `
<BubblePopup
  customClass="bubble-popup-bottom-right bubble-popup-menu"
  open={true}
  position={
    Object {
      "left": 0,
      "top": 0,
    }
  }>
  <MultiSelect
    elements={
      Array [
        "foo",
        "bar",
        "baz",
      ]
    }
    onSearch={[Function]}
    onSelect={[Function]}
    onUnselect={[Function]}
    selectedElements={
      Array [
        "bar",
      ]
    } />
</BubblePopup>
`;

exports[`test should render without tags at all 1`] = `
<BubblePopup
  customClass="bubble-popup-bottom-right bubble-popup-menu"
  open={true}
  position={
    Object {
      "left": 0,
      "top": 0,
    }
  }>
  <MultiSelect
    elements={Array []}
    onSearch={[Function]}
    onSelect={[Function]}
    onUnselect={[Function]}
    selectedElements={Array []} />
</BubblePopup>
`;
